ajustes de conflitos

--- a/templates/ocupa/index.html
+++ b/templates/ocupa/index.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <html>
 	<head>
+		<title>UFPEL - Reitoria Ocupa</title>
 		<link href="{% static 'css/normalize.css' %}" rel="stylesheet">
 		<link href="{% static 'css/screen.css' %}" rel="stylesheet">
 	</head>
